--- a/104m_adaptive/css/style.css
+++ b/104m_adaptive/css/style.css
@@ -37,6 +37,23 @@ html, body {
     width: 56%; /*180px*/
 }
 
+.preloader {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right:0;
+    bottom:0;
+    background: #eaeaea;
+    z-index: 30;
+}
+.preloader-animation {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url(../images/Ring-1.5s-200px.svg) no-repeat;
+    background-position: 50% 50%;
+    background-size: 100px;
+}
 header {
     height: 38px;
     width: 100%;
